terraform/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2  # 2 instances pour la tolérance aux pannes
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: zouboss/projetfilrouge_backend:latest
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
