terraform/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: zouboss/projetfilrouge_frontend:latest  # Ton image Docker Hub
        imagePullPolicy: Always
        ports:
        - containerPort: 80  # NGINX écoute sur 80 dans le conteneur
